--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap-vue": "^2.13.0",
         "jquery": "^3.5.1",
         "laravel-vue-pagination": "^2.3.1",
+        "moment": "^2.27.0",
         "vue-csrf": "^2.0.4"
     }
 }
