--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "bootstrap-vue": "^2.13.0",
+        "chart.js": "^2.9.3",
         "jquery": "^3.5.1",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.27.0",
