--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 /public/hot
 /vendor
 .env.backup
+.env_ori
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
-.env
 /.platform
 SoxAppKey.ppk
 sox.zip
