--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
+        "@vuese/cli": "^2.14.0",
         "bootstrap-vue": "^2.13.0",
         "chart.js": "^2.9.3",
         "jquery": "^3.5.1",
